# nachat-inkbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  kobo.cmake
inkbox_userapp/: app.json  create.sh
inkbox_userapp/nachat/app-bin/: nachat.sh
resources/: eink.qrc  eink.qss  icons.qrc
scripts/: deploy_debug.sh
src/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.hpp  ChatWindow.ui  JoinDialog.cpp  JoinDialog.hpp  JoinedRoomListModel.cpp  LoginDialog.cpp  LoginDialog.hpp  LoginDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  RoomMenu.cpp  RoomMenu.hpp  RoomView.cpp  RoomView.hpp  RoomView.ui  Spinner.cpp  TimelineView.cpp  main.cpp  showImage.cpp  showImage.h  showImage.ui  utils.hpp
src/matrix/: MemberListModel.cpp  Session.cpp  Session.hpp
